Sort order is no longer based on human-readable strings

--- a/app/assets/stylesheets/_layout.styl
+++ b/app/assets/stylesheets/_layout.styl
@@ -36,3 +36,6 @@ section
   padding 20px 0
   p
     color white
+
+.hidden
+  display none
